# mapa-ztm

./: .dockerignore  .gitignore  Dockerfile  README.md  README.pl.md  __version__.py  app.py  docker-compose-minimal.yml  docker-compose.yml  download_cache.py  pyproject.toml  requirements.txt  save_cache.py
.github/workflows/: docker.yaml
docs/pl/: docker_building.md  docker_install.md  native_install.md
frontend/: .gitignore  generate_app_info.js  index.html  package-lock.json  package.json  pwaManifest.js  vite.config.js
frontend/old/: main.js  style.scss
frontend/src/: App.jsx  App.scss  Icons.jsx  Icons.scss  Layers.jsx  Layers.scss  MapControls.jsx  MapControls.scss  UIElements.jsx  UIElements.scss  VehiclesLayer.jsx  helpers.scss  index.scss  main.js  main.jsx  style.css  style.scss  utils.js  variables.scss
modules/: config.py  consts.py  gtfs.py  gtfs_functions.py  gtfs_schedule.py  utils.py
